added presentation and main paragraph into index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
 <h1>Anna Bachorska</h1>
+<span>Frontend Developer</span>
+<p>
+    Mam na imię <b>Ania</b>! Jestem ambitną i dociekliwą Frontend Developerką.
+    Wcześniej studiowałam Budownictwo Lądowe oraz Zarządzanie Projektami m.in. w branży IT.
+</p>
+<h2>Doświadczenie zawodowe</h2>
+<h2>Wykształcenie</h2>
+<h2>Zainteresowania</h2>
