--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
     Wcześniej studiowałam Budownictwo Lądowe oraz Zarządzanie Projektami m.in. w branży IT.
 </p>
 <h2>Doświadczenie zawodowe</h2>
+<ul>
+    <li>2021 - obecnie : Własna działalność</li>
+    <li>2016 - 2020 : Itodesign - Kierownik projektów</li>
+    <li>2008 - 2016 : Murapol - Kierownik kontraktu/budowy</li>
+</ul>
 <h2>Wykształcenie</h2>
 <h2>Zainteresowania</h2>
