added links in index.html

--- a/index.html
+++ b/index.html
@@ -11,4 +11,9 @@
     <li>2008 - 2016 : Murapol - Kierownik kontraktu/budowy</li>
 </ul>
 <h2>Wykształcenie</h2>
+<ul>
+    <li>2009 - 2010: ZARZADZANIE PROJEKTAMI | <a href="https://pg.edu.pl/">Politechnika Gdańska</a> - Podyplomowe</li>
+    <li>2002 - 2007: BUDOWNICTWO LĄDOWE | <a href="http://www.pk.edu.pl/">Politechnika Krakowska</a> - Magister inżynier</li>
+    <li>2007 - 2007: DEPARTMENT OF CIVIL ENGINEERING | <a href="https://www.ubi.pt/">Universidade da Beira Interior</a>, Covilha, Portugalia - Praca dyplomowa</li>
+</ul>
 <h2>Zainteresowania</h2>
