index.html modified with css

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <img src="photo_CV.jpg" width="150px" height="220px"/> 
-<h1>Anna Bachorska</h1>
-<span>Frontend Developer</span>
+<h1 style="font-size: 36px;">Anna Bachorska</h1>
+<span style="color:cornflowerblue">Frontend Developer</span>
 <p>
     Mam na imię <b>Ania</b>! Jestem ambitną i dociekliwą Frontend Developerką.
     Wcześniej studiowałam Budownictwo Lądowe oraz Zarządzanie Projektami m.in. w branży IT.
 </p>
-<h2>Doświadczenie zawodowe</h2>
+<h2 style="font-size: 28px;">Doświadczenie zawodowe</h2>
 <ul>
     <li>2021 - obecnie : Własna działalność</li>
     <li>2016 - 2020 : Itodesign - Kierownik projektów</li>
     <li>2008 - 2016 : Murapol - Kierownik kontraktu/budowy</li>
 </ul>
-<h2>Wykształcenie</h2>
+<h2 style="font-size: 28px;">Wykształcenie</h2>
 <ul>
     <li>2009 - 2010: ZARZADZANIE PROJEKTAMI | <a href="https://pg.edu.pl/">Politechnika Gdańska</a> - Podyplomowe</li>
     <li>2002 - 2007: BUDOWNICTWO LĄDOWE | <a href="http://www.pk.edu.pl/">Politechnika Krakowska</a> - Magister inżynier</li>
     <li>2007 - 2007: DEPARTMENT OF CIVIL ENGINEERING | <a href="https://www.ubi.pt/">Universidade da Beira Interior</a>, Covilha, Portugalia - Praca dyplomowa</li>
 </ul>
-<h2>Zainteresowania</h2>
+<h2 style="font-size: 28px;">Zainteresowania</h2>
