new file style.css created

--- a/index.html
+++ b/index.html
@@ -3,23 +3,11 @@
 
 <head>
     <title>Anna Bachorska - CV</title>
-    <style>
-        h2 {
-            font-size: 28px;
-        }
-
-        h1 {
-            font-size: 36px;
-        }
-
-        span {
-            color: cornflowerblue;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
-    <img src="photo_CV.jpg" width="150px" height="220px" />
+    <img src="photo_CV.jpg"  />
     <h1>Anna Bachorska</h1>
     <span>Frontend Developer</span>
     <p>
