--- a/index.html
+++ b/index.html
@@ -7,29 +7,54 @@
 </head>
 
 <body>
-    <img src="photo_CV.jpg"  />
-    <h1>Anna Bachorska</h1>
-    <span>Frontend Developer</span>
-    <p>
-        Mam na imię <b>Ania</b>! Jestem ambitną i dociekliwą Frontend Developerką.
-        Wcześniej studiowałam Budownictwo Lądowe oraz Zarządzanie Projektami m.in. w branży IT.
-    </p>
-    <h2>Doświadczenie zawodowe</h2>
-    <ul>
-        <li>2021 - obecnie : Własna działalność</li>
-        <li>2016 - 2020 : Itodesign - Kierownik projektów</li>
-        <li>2008 - 2016 : Murapol - Kierownik kontraktu/budowy</li>
-    </ul>
-    <h2>Wykształcenie</h2>
-    <ul>
-        <li>2009 - 2010: ZARZADZANIE PROJEKTAMI | <a href="https://pg.edu.pl/">Politechnika Gdańska</a> - Podyplomowe
-        </li>
-        <li>2002 - 2007: BUDOWNICTWO LĄDOWE | <a href="http://www.pk.edu.pl/">Politechnika Krakowska</a> - Magister
-            inżynier</li>
-        <li>2007 - 2007: DEPARTMENT OF CIVIL ENGINEERING | <a href="https://www.ubi.pt/">Universidade da Beira
-                Interior</a>, Covilha, Portugalia - Praca dyplomowa</li>
-    </ul>
-    <h2>Zainteresowania</h2>
+    <header>
+        <img src="photo_CV.jpg"  />
+        <h1>Anna Bachorska</h1>
+        <span>Frontend Developer</span>
+    </header>
+    <main>
+        <section>
+            <h2>O mnie</h2>
+            <p>
+                Mam na imię <b>Ania</b>! Jestem ambitną i dociekliwą Frontend Developerką.
+                Wcześniej studiowałam Budownictwo Lądowe oraz Zarządzanie Projektami m.in. w branży IT.
+            </p>
+        </section>
+        <section>
+            <h2>Doświadczenie zawodowe</h2>
+            <ul>
+                <li>2021 - obecnie : Własna działalność</li>
+                <li>2016 - 2020 : Itodesign - Kierownik projektów</li>
+                <li>2008 - 2016 : Murapol - Kierownik kontraktu/budowy</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Języki</h2>
+            <ul>
+                <li>Angielski - B2</li>
+                <li>Polski - ojczysty</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Wykształcenie</h2>
+            <ul>
+                <li>2009 - 2010: ZARZADZANIE PROJEKTAMI | <a href="https://pg.edu.pl/">Politechnika Gdańska</a> - Podyplomowe
+                </li>
+                <li>2002 - 2007: BUDOWNICTWO LĄDOWE | <a href="http://www.pk.edu.pl/">Politechnika Krakowska</a> - Magister
+                    inżynier</li>
+                <li>2007 - 2007: DEPARTMENT OF CIVIL ENGINEERING | <a href="https://www.ubi.pt/">Universidade da Beira
+                        Interior</a>, Covilha, Portugalia - Praca dyplomowa</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Zainteresowania</h2>
+            <ul>
+                <li>Biegi na orientację</li>
+                <li>Turystyka górska</li>
+                <li>Szachy</li>
+            </ul>
+        </section>
+    </main>
 </body>
 
 </html>
