modified in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2>O mnie</h2>
             <p>
                 Mam na imię <b>Ania</b>! Jestem ambitną i dociekliwą Frontend Developerką.
-                Wcześniej studiowałam Budownictwo Lądowe oraz Zarządzanie Projektami m.in. w branży IT.
+                Wcześniej studiowałam <i>Budownictwo Lądowe</i> oraz <i>Zarządzanie Projektami</i> m.in. w branży IT.
             </p>
         </section>
         <section>
