added tag address in index.html and new container header in style.css

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 <body>
     <header>
         <img src="photo_CV.jpg"  />
-        <h1>Anna Bachorska</h1>
-        <span>Frontend Developer</span>
+        <div>
+            <h1>Anna Bachorska</h1>
+            <span>Frontend Developer</span>
+        </div>
+        <address>
+            <ul>
+                <li>Email: anakonceptinfo@gmail.com</li>
+                <li>Miejsce zamieszkania: Gdańsk</li>
+            </ul>
+        </address>
     </header>
     <main>
         <section>
