atteched icons in index.html and modified style.css

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <address>
             <ul>
-                <li>Email: anakonceptinfo@gmail.com</li>
-                <li>Miejsce zamieszkania: Gdańsk</li>
+                <li><img src="images/mail.png"/><b>Email:</b> anakonceptinfo@gmail.com</li>
+                <li><img src="images/pin.png"/><b>Miejsce zamieszkania:</b> Gdańsk</li>
             </ul>
         </address>
     </header>
