added classes in index.html

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
 <body>
     <header>
-        <img src="photo_CV.jpg"  />
+        <img class="circle-photo" src="photo_CV.jpg"  />
         <div>
             <h1>Anna Bachorska</h1>
             <span>Frontend Developer</span>
         </div>
         <address>
             <ul>
-                <li><img src="images/mail.png"/><b>Email:</b> anakonceptinfo@gmail.com</li>
-                <li><img src="images/pin.png"/><b>Miejsce zamieszkania:</b> Gdańsk</li>
+                <li><img class="address-icon circle" src="images/mail.png"/><b>Email:</b> anakonceptinfo@gmail.com</li>
+                <li><img class="address-icon circle" src="images/pin.png"/><b>Miejsce zamieszkania:</b> Gdańsk</li>
             </ul>
         </address>
     </header>
@@ -24,7 +24,7 @@
         <section>
             <h2>O mnie</h2>
             <p>
-                Mam na imię <b>Ania</b>! Jestem ambitną i dociekliwą Frontend Developerką.
+                Mam na imię <b>Ania</b>! Jestem zmotywowaną, dociekliwą i pozytywnie nastawioną Frontend Developerką.
                 Wcześniej studiowałam <i>Budownictwo Lądowe</i> oraz <i>Zarządzanie Projektami</i> m.in. w branży IT.
             </p>
         </section>
