added next new classes in index.html

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 
 <head>
     <title>Anna Bachorska - CV</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <header>
-        <img class="circle-photo" src="photo_CV.jpg"  />
+        <img class="profile-picture circle-photo" src="photo_CV.jpg" />
         <div>
             <h1>Anna Bachorska</h1>
             <span>Frontend Developer</span>
         </div>
         <address>
             <ul>
-                <li><img class="address-icon circle" src="images/mail.png"/><b>Email:</b> anakonceptinfo@gmail.com</li>
-                <li><img class="address-icon circle" src="images/pin.png"/><b>Miejsce zamieszkania:</b> Gdańsk</li>
+                <li><img class="address-icon circle" src="images/mail.png" /><b>Email:</b> anakonceptinfo@gmail.com</li>
+                <li><img class="address-icon circle" src="images/pin.png" /><b>Miejsce zamieszkania:</b> Gdańsk</li>
             </ul>
         </address>
     </header>
@@ -46,9 +46,11 @@
         <section>
             <h2>Wykształcenie</h2>
             <ul>
-                <li>2009 - 2010: ZARZADZANIE PROJEKTAMI | <a href="https://pg.edu.pl/">Politechnika Gdańska</a> - Podyplomowe
+                <li>2009 - 2010: ZARZADZANIE PROJEKTAMI | <a href="https://pg.edu.pl/">Politechnika Gdańska</a> -
+                    Podyplomowe
                 </li>
-                <li>2002 - 2007: BUDOWNICTWO LĄDOWE | <a href="http://www.pk.edu.pl/">Politechnika Krakowska</a> - Magister
+                <li>2002 - 2007: BUDOWNICTWO LĄDOWE | <a href="http://www.pk.edu.pl/">Politechnika Krakowska</a> -
+                    Magister
                     inżynier</li>
                 <li>2007 - 2007: DEPARTMENT OF CIVIL ENGINEERING | <a href="https://www.ubi.pt/">Universidade da Beira
                         Interior</a>, Covilha, Portugalia - Praca dyplomowa</li>
@@ -56,10 +58,44 @@
         </section>
         <section>
             <h2>Zainteresowania</h2>
-            <ul>
-                <li>Biegi na orientację</li>
-                <li>Turystyka górska</li>
-                <li>Szachy</li>
+            <ul class="hobbies">
+                <li><img src="images/compass.png" />
+                    <div>
+                    <h3>Biegi na orientację</h3>
+                    <p>
+                        Biegi na orientację to czas spędzony na świeżym powietrzu. Regularnie biegam i uczestniczę w różnych imprezach m.in. w Harpaganie.
+                    </p>
+                    </div>
+                </li>
+                <li><img src="images/mountain.png" />
+                    <div>
+                    <h3>Turystyka górska</h3>
+                    <p>
+                        Uwielbiam wędrówki górskie. Moje ulubione pasma górskie w Polsce to Bieszczady i Gorce. Moim
+                        życiowym celem
+                        jest zrobić trekking ABC w Nepalu.
+                    </p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/puzzle.png" />
+                    <div>
+                    <h3>Gry planszowe</h3>
+                    <p>
+                        Gry planszowego to dla mnie wspaniałe spędzanie wolnego czasu bez sprzętu elektronicznego.
+                    </p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/crown.png" />
+                    <div>
+                    <h3>Szachy</h3>
+                    <p>
+                        Od dziecka gram w szachy. Lubię rozwijać nowe umiejętności w tym hobby i poznawać nowe
+                        strategie.
+                    </p>
+                </div>
+                </li>
             </ul>
         </section>
     </main>
