added link with animation to download pdf in index.html

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
         <div>
             <h1>Anna Bachorska</h1>
             <span>Frontend Developer</span>
+            <div>
+                <a class="cv-download-link" href="https://store3.gofile.io/download/a9fa3978-daca-40e8-86a1-39d80c91a0c5/CV%20-%20fronted%20developer.pdf">Pobierz CV</a>
+            </div>
         </div>
         <address>
             <ul>
-                <li><img class="address-icon circle" src="images/mail.png" /><b>Email:</b> anakonceptinfo@gmail.com</li>
+                <li><img class="address-icon circle" src="images/mail.png" /><b>Email:</b><a href="mailto:anakonceptinfo@gmail.com">anakonceptinfo@gmail.com</a></li>
                 <li><img class="address-icon circle" src="images/pin.png" /><b>Miejsce zamieszkania:</b> Gdańsk</li>
             </ul>
         </address>
@@ -31,9 +34,9 @@
         <section>
             <h2>Doświadczenie zawodowe</h2>
             <ul>
-                <li>2021 - obecnie : Własna działalność</li>
+                <li>2021 - obecnie : Własna działalność - Trend Koncept</li>
                 <li>2016 - 2020 : Itodesign - Kierownik projektów</li>
-                <li>2008 - 2016 : Murapol - Kierownik kontraktu/budowy</li>
+                <li>2008 - 2016 : <a href="https://murapol.pl/">Murapol</a> - Kierownik kontraktu/budowy</li>
             </ul>
         </section>
         <section>
