added shadows in style.css

--- a/index.html
+++ b/index.html
@@ -7,101 +7,112 @@
 </head>
 
 <body>
-    <header>
-        <img class="profile-picture circle-photo" src="photo_CV.jpg" />
-        <div>
-            <h1>Anna Bachorska</h1>
-            <span>Frontend Developer</span>
+    <div class="container">
+        <header>
+            <img class="profile-picture circle-photo" src="photo_CV.jpg" />
             <div>
-                <a class="cv-download-link" href="https://store3.gofile.io/download/a9fa3978-daca-40e8-86a1-39d80c91a0c5/CV%20-%20fronted%20developer.pdf">Pobierz CV</a>
-            </div>
-        </div>
-        <address>
-            <ul>
-                <li><img class="address-icon circle" src="images/mail.png" /><b>Email:</b><a href="mailto:anakonceptinfo@gmail.com">anakonceptinfo@gmail.com</a></li>
-                <li><img class="address-icon circle" src="images/pin.png" /><b>Miejsce zamieszkania:</b> Gdańsk</li>
-            </ul>
-        </address>
-    </header>
-    <main>
-        <section>
-            <h2>O mnie</h2>
-            <p>
-                Mam na imię <b>Ania</b>! Jestem zmotywowaną, dociekliwą i pozytywnie nastawioną Frontend Developerką.
-                Wcześniej studiowałam <i>Budownictwo Lądowe</i> oraz <i>Zarządzanie Projektami</i> m.in. w branży IT.
-            </p>
-        </section>
-        <section>
-            <h2>Doświadczenie zawodowe</h2>
-            <ul>
-                <li>2021 - obecnie : Własna działalność - Trend Koncept</li>
-                <li>2016 - 2020 : Itodesign - Kierownik projektów</li>
-                <li>2008 - 2016 : <a href="https://murapol.pl/">Murapol</a> - Kierownik kontraktu/budowy</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Języki</h2>
-            <ul>
-                <li>Angielski - B2</li>
-                <li>Polski - ojczysty</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Wykształcenie</h2>
-            <ul>
-                <li>2009 - 2010: ZARZADZANIE PROJEKTAMI | <a href="https://pg.edu.pl/">Politechnika Gdańska</a> -
-                    Podyplomowe
-                </li>
-                <li>2002 - 2007: BUDOWNICTWO LĄDOWE | <a href="http://www.pk.edu.pl/">Politechnika Krakowska</a> -
-                    Magister
-                    inżynier</li>
-                <li>2007 - 2007: DEPARTMENT OF CIVIL ENGINEERING | <a href="https://www.ubi.pt/">Universidade da Beira
-                        Interior</a>, Covilha, Portugalia - Praca dyplomowa</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Zainteresowania</h2>
-            <ul class="hobbies">
-                <li><img src="images/compass.png" />
-                    <div>
-                    <h3>Biegi na orientację</h3>
-                    <p>
-                        Biegi na orientację to czas spędzony na świeżym powietrzu. Regularnie biegam i uczestniczę w różnych imprezach m.in. w Harpaganie.
-                    </p>
-                    </div>
-                </li>
-                <li><img src="images/mountain.png" />
-                    <div>
-                    <h3>Turystyka górska</h3>
-                    <p>
-                        Uwielbiam wędrówki górskie. Moje ulubione pasma górskie w Polsce to Bieszczady i Gorce. Moim
-                        życiowym celem
-                        jest zrobić trekking ABC w Nepalu.
-                    </p>
-                    </div>
-                </li>
-                <li>
-                    <img src="images/puzzle.png" />
-                    <div>
-                    <h3>Gry planszowe</h3>
-                    <p>
-                        Gry planszowego to dla mnie wspaniałe spędzanie wolnego czasu bez sprzętu elektronicznego.
-                    </p>
-                    </div>
-                </li>
-                <li>
-                    <img src="images/crown.png" />
-                    <div>
-                    <h3>Szachy</h3>
-                    <p>
-                        Od dziecka gram w szachy. Lubię rozwijać nowe umiejętności w tym hobby i poznawać nowe
-                        strategie.
-                    </p>
+                <h1>Anna Bachorska</h1>
+                <span>Frontend Developer</span>
+                <div>
+                    <a class="cv-download-link"
+                        href="https://store5.gofile.io/download/6e43a957-e29b-4402-9c36-1bb803a74efa/CV%20-%20fronted%20developer.pdf">Pobierz
+                        CV</a>
                 </div>
-                </li>
-            </ul>
-        </section>
-    </main>
+            </div>
+            <address>
+                <ul>
+                    <li><img class="address-icon circle" src="images/mail.png" /><b>Email:</b><a
+                            href="mailto:anakonceptinfo@gmail.com">anakonceptinfo@gmail.com</a></li>
+                    <li><img class="address-icon circle" src="images/pin.png" /><b>Miejsce zamieszkania:</b> Gdańsk</li>
+                </ul>
+            </address>
+        </header>
+        <main>
+            <section>
+                <h2>O mnie</h2>
+                <p>
+                    Mam na imię <b>Ania</b>! Jestem zmotywowaną, dociekliwą i pozytywnie nastawioną Frontend
+                    Developerką.
+                    Wcześniej studiowałam <i>Budownictwo Lądowe</i> oraz <i>Zarządzanie Projektami</i> m.in. w branży
+                    IT.
+                </p>
+            </section>
+            <section>
+                <h2>Doświadczenie zawodowe</h2>
+                <ul>
+                    <li>2021 - obecnie : Własna działalność - Trend Koncept</li>
+                    <li>2016 - 2020 : Itodesign - Kierownik projektów</li>
+                    <li>2008 - 2016 : <a href="https://murapol.pl/">Murapol</a> - Kierownik kontraktu/budowy</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Języki</h2>
+                <ul>
+                    <li>Angielski - B2</li>
+                    <li>Polski - ojczysty</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Wykształcenie</h2>
+                <ul>
+                    <li>2009 - 2010: ZARZADZANIE PROJEKTAMI | <a href="https://pg.edu.pl/">Politechnika Gdańska</a> -
+                        Podyplomowe
+                    </li>
+                    <li>2002 - 2007: BUDOWNICTWO LĄDOWE | <a href="http://www.pk.edu.pl/">Politechnika Krakowska</a> -
+                        Magister
+                        inżynier</li>
+                    <li>2007 - 2007: CIVIL ENGINEERING | <a href="https://www.ubi.pt/">Universidade da
+                            Beira
+                            Interior</a> Covilha, Portugalia - Praca dyplomowa</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Zainteresowania</h2>
+                <ul class="hobbies">
+                    <li><img src="images/compass.png" />
+                        <div>
+                            <h3>Biegi na orientację</h3>
+                            <p>
+                                Biegi na orientację to czas spędzony na świeżym powietrzu. Regularnie biegam i
+                                uczestniczę w różnych imprezach m.in. w Harpaganie.
+                            </p>
+                        </div>
+                    </li>
+                    <li><img src="images/mountain.png" />
+                        <div>
+                            <h3>Turystyka górska</h3>
+                            <p>
+                                Uwielbiam wędrówki górskie. Moje ulubione pasma górskie w Polsce to Bieszczady i Gorce.
+                                Moim
+                                życiowym celem
+                                jest zrobić trekking ABC w Nepalu.
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/puzzle.png" />
+                        <div>
+                            <h3>Gry planszowe</h3>
+                            <p>
+                                Gry planszowego to dla mnie wspaniałe spędzanie wolnego czasu bez sprzętu
+                                elektronicznego.
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="images/crown.png" />
+                        <div>
+                            <h3>Szachy</h3>
+                            <p>
+                                Od dziecka gram w szachy. Lubię rozwijać nowe umiejętności w tym hobby i poznawać nowe
+                                strategie.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+        </main>
+    </div>
 </body>
 
 </html>
