--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <img class="profile-picture circle-photo" src="photo_CV.jpg" />
+            <img class="profile-picture circle-photo" src="photo_CV.jpg" alt="Zdjęcie profilowe"/>
             <div>
                 <h1>Anna Bachorska</h1>
                 <span>Frontend Developer</span>
